# Embedded-Intent-Recognition

./: CMakeLists.txt  README.md  main.cpp
Emd_Intent_Recognizer/: CMakeLists.txt
Emd_Intent_Recognizer/header/: CsvReader.h  EmdIntentRecognizer.h
Emd_Intent_Recognizer/src/: CsvReader.cpp  EmdIntentRecognizer.cpp
data/: Reference.csv
utest/: CMakeLists.txt  EmdIntentRecognizerTest.cpp
